<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>fr.ufrst.m1info.pvm.group5</groupId>
        <artifactId>group5</artifactId>
        <version>2-SNAPSHOT</version>
    </parent>

    <artifactId>driver</artifactId>
    <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
<junit.version>5.10.0</junit.version>  </properties>

  <dependencies>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>22.0.2</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>22.0.2</version>
    </dependency>

      <dependency>
          <groupId>org.testfx</groupId>
          <artifactId>testfx-junit5</artifactId>
          <version>4.0.16-alpha</version>
          <scope>test</scope>
      </dependency>

      <dependency>
          <groupId>fr.ufrst.m1info.pvm.group5</groupId>
          <artifactId>memory</artifactId>
          <version>2-SNAPSHOT</version>
          <scope>compile</scope>
      </dependency>

      <dependency>
          <groupId>fr.ufrst.m1info.pvm.group5</groupId>
          <artifactId>interpreter</artifactId>
          <version>2-SNAPSHOT</version>
      </dependency>

      <dependency>
          <groupId>fr.ufrst.m1info.pvm.group5</groupId>
          <artifactId>compiler</artifactId>
          <version>2-SNAPSHOT</version>
      </dependency>

      <dependency>
          <groupId>org.kordamp.ikonli</groupId>
          <artifactId>ikonli-javafx</artifactId>
          <version>12.2.0</version>
      </dependency>
      <dependency>
          <groupId>org.kordamp.ikonli</groupId>
          <artifactId>ikonli-fontawesome5-pack</artifactId>
          <version>12.2.0</version>
      </dependency>
      <dependency>
          <groupId>org.kordamp.ikonli</groupId>
          <artifactId>ikonli-materialdesign-pack</artifactId>
          <version>12.2.0</version>
      </dependency>

  </dependencies>

  <build>

    <plugins>


        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>3.6.0</version>
            <executions>
                <execution>
                    <phase>package</phase>
                    <goals>
                        <goal>shade</goal>
                    </goals>
                    <configuration>
                        <transformers>
                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                <mainClass>
                                    fr.ufrst.m1info.pvm.group5.driver.MainApplication
                                </mainClass>
                            </transformer>
                        </transformers>
                    </configuration>
                </execution>
            </executions>
        </plugin>


      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>22</source>
          <target>22</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <executions>
          <execution>
            <!-- Default configuration for running with: mvn clean javafx:run -->
            <id>default-cli</id>
            <configuration>
                <mainClass>fr.ufrst.m1info.pvm.group5.driver.MainApplication</mainClass>
                <launcher>app</launcher>
                <jlinkZipName>app</jlinkZipName>
                <jlinkImageName>app</jlinkImageName>
                <noManPages>true</noManPages>
                <stripDebug>true</stripDebug>
                <noHeaderFiles>true</noHeaderFiles>
            </configuration>
          </execution>
        </executions>
      </plugin>

        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.2.5</version>
            <configuration>
                <useModulePath>false</useModulePath>
            </configuration>
        </plugin>

    </plugins>
  </build>
</project>